--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "webpack": "^1.12.12"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0"
   }
 }
