--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-react": "^6.3.13",
+    "classnames": "^2.2.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "webpack": "^1.12.12"
